--- a/meusite/style.css
+++ b/meusite/style.css
@@ -23,6 +23,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+ 
+  
+
+
     
 }
 
@@ -58,6 +62,8 @@ h1{
     border: 1px solid rgba(103, 101, 105, 0.438);
     padding: 30px;
     gap: 25px;
+    margin: auto;
+    min-width: 320px;
 
     
 
