--- a/meusite/style.css
+++ b/meusite/style.css
@@ -41,8 +41,8 @@ h1{
 
 .projeto2 {
     position: absolute;
-    width: 400px;
-    height: 500px;
+    min-width: 320px;
+    max-width: 500px;
     background-image: url(thumb-1920-1358905.png);
     background-size: cover;
     border-radius: 5px;
@@ -54,8 +54,7 @@ h1{
 
 .projeto {
     position: absolute;
-    width: 400px;
-    height: 500px;
+    
     display: flex;
     align-items: center;
     flex-direction: column;
