--- a/projeto-meuslinks/style.css
+++ b/projeto-meuslinks/style.css
@@ -187,7 +187,8 @@ h2 {
 
 footer {
     text-align: center;
-    margin-top: 50px;
+    padding: 30px;
+margin: 50px 0 ;
     color: #f0ecec;
     font-family: var(--fonte-h1);
     font-size: 1.1em;
