--- a/projeto-meuslinks/style.css
+++ b/projeto-meuslinks/style.css
@@ -108,6 +108,29 @@ h2 {
     }
 }
 
+.instagram {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 50px 0 50px;
+
+    p {
+        color: white;
+        font-family: var(--fonte-2);
+
+    }
+}
+.instagram:hover {
+    scale: 1.3;
+}
+
+.instagram:hover {
+    p {
+        font-weight: 400;
+        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
+    }
+}
+
 .linkedin {
     display: flex;
     align-items: center;
