--- a/projeto-meuslinks/style.css
+++ b/projeto-meuslinks/style.css
@@ -115,7 +115,7 @@ h2 {
     padding: 0 50px 0 50px;
 
     p {
-        color: white;
+        color: rgb(252, 250, 250);
         font-family: var(--fonte-2);
 
     }
