--- a/projeto-meuslinks/style.css
+++ b/projeto-meuslinks/style.css
@@ -22,7 +22,7 @@
 
 body {
     background-color: rgb(7, 1, 1);
-    background-image: url(./imagem/thumb-1920-1358905.png);
+    background-image: url(./imagem/ChatGPT\ Image\ 5\ de\ abr.\ de\ 2025\,\ 20_58_28.png);
     background-color: rgba(0, 0, 0, 0.26);
     background-size: cover;
 
@@ -57,7 +57,7 @@ main {
     justify-content: center;
     gap: 30px;
     /* background-image: url(./imagem/thumb-1920-1358905.png); */
-    background-color: rgba(0, 0, 0, 0.541);
+    background-color: rgba(0, 0, 0, 0.603);
     background-blend-mode: darken;
     background-size: cover;
     box-shadow: -1px -1px 15px rgba(7, 163, 150, 0.295);
