--- a/projeto-meuslinks/style.css
+++ b/projeto-meuslinks/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
-
 
 * {
     margin: 0;
@@ -13,205 +10,86 @@
 :root {
     --fonte-h1: "Josefin Sans", sans-serif;
     --fonte-2: "Josefin Sans", sans-serif;
-
-
 }
-
-
-
 
 body {
     background-color: rgb(7, 1, 1);
     background-image: url(./imagem/ChatGPT\ Image\ 5\ de\ abr.\ de\ 2025\,\ 20_58_28.png);
     background-color: rgba(0, 0, 0, 0.26);
-    /* background-size: cover; */
-
-   
+    background-size: cover;
+    background-attachment: fixed; /* Essa linha foi adicionada para corrigir o problema */
+    background-position: center;
 }
 
 main {
     min-width: 300px;
-    max-width: 1000px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   margin: auto;
-   margin-top: 100px;
-
-
-
+    max-width: 1000px;
+    margin: 100px auto;
+    padding: 0 15px;
+    text-align: center;
 }
 
-
-
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
 
 .projeto {
-
     border: 1px solid rgba(145, 143, 146, 0.521);
     border-radius: 5px;
     padding: 50px;
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: 30px;
-    /* background-image: url(./imagem/thumb-1920-1358905.png); */
     background-color: rgba(0, 0, 0, 0.603);
     background-blend-mode: darken;
-    background-size: cover;
     box-shadow: -1px -1px 15px rgba(7, 163, 150, 0.295);
-    /* Adiciona uma sombra */
-
-
-
 }
 
 h1 {
+    width: 100%;
     color: #FFFFFF;
-    /* Branco puro */
     text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
     font-family: var(--fonte-h1);
-
+    margin-bottom: 20px;
 }
 
 h2 {
     color: #FFFFFF;
-    /* Branco puro */
     text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
     font-family: var(--fonte-h1);
-    margin-right: 10px;
     text-align: center;
     padding: 20px;
 }
 
-
-
-.github {
+.github, .instagram, .linkedin, .discord, .facebook {
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 30px;
-    padding: 0 50px 0 50px;
-
-    p {
-        color: white;
-        font-family: var(--fonte-2);
-
-    }
-
+    text-align: center;
+    transition: transform 0.3s ease;
 }
 
-.github:hover {
-    scale: 1.3;
+.github:hover, .instagram:hover, .linkedin:hover, .discord:hover, .facebook:hover {
+    transform: scale(1.1);
 }
 
-.github:hover {
-    p {
-        font-weight: 400;
-        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
-    }
+.github p, .instagram p, .linkedin p, .discord p, .facebook p {
+    color: white;
+    font-family: var(--fonte-2);
+    margin-top: 10px;
+    font-size: 1rem;
 }
 
-.instagram {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 50px 0 50px;
-
-    p {
-        color: rgb(252, 250, 250);
-        font-family: var(--fonte-2);
-
-    } 
+.github:hover p, .instagram:hover p, .linkedin:hover p, .discord:hover p, .facebook:hover p {
+    font-weight: 400;
+    text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
 }
-.instagram:hover {
-    scale: 1.3;
-
-}
-
-.instagram:hover {
-    p {
-        font-weight: 400;
-        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
-    }
-}
-
-.linkedin {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 50px 0 50px;
-
-    p {
-        color: white;
-        font-family: var(--fonte-2);
-
-    }
-
-}
-
-.linkedin:hover {
-    scale: 1.3;
-}
-
-.linkedin:hover {
-    p {
-        font-weight: 400;
-        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
-    }
-}
-
-.discord {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 50px 0 50px;
-
-    p {
-        color: white;
-        font-family: var(--fonte-2);
-
-    }
-
-}
-
-.discord:hover {
-    scale: 1.3;
-}
-
-.discord:hover {
-    p {
-        font-weight: 400;
-        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
-    }
-}
-
-
-.facebook {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 50px 0 50px;
-
-    p {
-        color: white;
-        font-family: var(--fonte-2);
-
-    }
-
-}
-
-.facebook:hover {
-    scale: 1.3;
-}
-
-.facebook:hover {
-    p {
-        font-weight: 400;
-        text-shadow: 0 0 5px #00C8E6, 0 0 10px #0088CC;
-    }
-}
-
 
 footer {
     text-align: center;
@@ -221,4 +99,28 @@ footer {
     font-family: var(--fonte-h1);
     font-size: 1.1em;
     text-shadow: 0 0 5px #00c7e6a9, 0 0 10px #0088ccb7;
+}
+
+/* Media query para telas menores (celulares) */
+@media (max-width: 600px) {
+    main {
+        margin-top: 50px;
+        padding: 0 10px;
+    }
+    
+    .projeto {
+        flex-direction: column;
+        padding: 30px 20px;
+        gap: 20px;
+    }
+    
+    h1 {
+        font-size: 1.8em;
+        margin-bottom: 15px;
+    }
+
+    footer {
+        font-size: 0.9em;
+        margin: 30px 0;
+    }
 }
